# zipcode_features

./: README.md  azure-pipelines.yml  clean_install.sh  pyproject.toml  requirements.txt  setup.py
src/zipcode_features/: __init__.py
src/zipcode_features/data/: bls_2025_quarter_three.csv  cbsa_codes.json  cbsa_codes_bigger.json  cbsa_to_zip.csv  generate_zip_to_cbsa.py
zipcode_features/: CBSA_ZIP_122025.xlsx  ZIP_COUNTY_122025.csv  __init__.py  bls_2025_quarter_four.csv  bls_2025_quarter_one.csv  bls_2025_quarter_two.csv  cbsa_codes.json
